tests/baselines/reference/parser15.4.4.14-9-2.errors.txt
tests/cases/conformance/parser/ecmascript5/parser15.4.4.14-9-2.ts(16,15): error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
  Type argument candidate 'number' is not a valid type argument because it is not a supertype of candidate 'false'.
tests/cases/conformance/parser/ecmascript5/parser15.4.4.14-9-2.ts(25,1): error TS2304: Cannot find name 'runTestCase'.


==== tests/cases/conformance/parser/ecmascript5/parser15.4.4.14-9-2.ts (2 errors) ====
    /// Copyright (c) 2012 Ecma International.  All rights reserved. 
    /// Ecma International makes this code available under the terms and conditions set
    /// forth on http://hg.ecmascript.org/tests/test262/raw-file/tip/LICENSE (the 
    /// "Use Terms").   Any redistribution of this code must retain the above 
    /// copyright and this notice and otherwise comply with the Use Terms.
    /**
     * @path ch15/15.4/15.4.4/15.4.4.14/15.4.4.14-9-2.js
     * @description Array.prototype.indexOf must return correct index (Number)
     */
    
    
    function testcase() {
      var obj = {toString:function (){return 0}};
      var one = 1;
      var _float = -(4/3);
      var a = new Array(false,undefined,null,"0",obj,-1.3333333333333, "str",-0,true,+0, one, 1,0, false, _float, -(4/3));
                  ~~~~~
!!! error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
!!! error TS2453:   Type argument candidate 'number' is not a valid type argument because it is not a supertype of candidate 'false'.
      if (a.indexOf(-(4/3)) === 14 &&      // a[14]=_float===-(4/3)
          a.indexOf(0) === 7      &&       // a[7] = +0, 0===+0
          a.indexOf(-0) === 7      &&     // a[7] = +0, -0===+0
          a.indexOf(1) === 10 )            // a[10] =one=== 1
      {
        return true;
      }
     }
    runTestCase(testcase);
    ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'runTestCase'.
    